src/objects/Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Additional comments / suggestions</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Composite_Rating__c</fullName>
        <formula>IF(Tour__c,(
Case(Tour_Guide_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0) +
Case(Tour_Content_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0) +
Case(Tasting_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0) +
Case(Gift_Shop_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0) +
Case(Food_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0))/5
,(
Case(Gift_Shop_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0) +
Case(Food_Rating__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,0))/2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of Tour and Stillhouse Ratings or just the Sthillhouse Ratings if a Tour wasn&apos;t taken</inlineHelpText>
        <label>Composite Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Participant provided email address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In_Special_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you like information on special events?</inlineHelpText>
        <label>Email Opt-In Special Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Food_Rating__c</fullName>
        <inlineHelpText>Rate the food quality at Fred&apos;s Smokehouse

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Food Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Shop_Rating__c</fullName>
        <inlineHelpText>Rate the selection of the gift shop merchandise

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Gift Shop Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Tour_Date__c</fullName>
        <inlineHelpText>Eastern Time Zone</inlineHelpText>
        <label>Local Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Tour_Time__c</fullName>
        <inlineHelpText>Eastern Time Zone</inlineHelpText>
        <label>Local Tour Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Based on Survey Location</inlineHelpText>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>American Stillhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Stillhouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <inlineHelpText>Overall my visit here left me feeling?

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Overall Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall__c</fullName>
        <formula>IMAGE( 
CASE(Overall_Rating__c, 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;Overall Rating&quot;)</formula>
        <inlineHelpText>Overall Rating</inlineHelpText>
        <label>Overall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasting_Rating__c</fullName>
        <inlineHelpText>How was your tasting experience?

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Tasting Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tour_Content_Rating__c</fullName>
        <inlineHelpText>How was the content of the tour?

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Tour Content Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tour_Date_Time__c</fullName>
        <inlineHelpText>Eastern Time Zone</inlineHelpText>
        <label>Tour Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tour_Guide_Rating__c</fullName>
        <inlineHelpText>If yes, how was your tour guide?

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Tour Guide Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tour_Guide__c</fullName>
        <inlineHelpText>Who was your tour guide?</inlineHelpText>
        <label>Tour Guide</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Lost_Detail__c</fullName>
        <inlineHelpText>If now, why note? Other</inlineHelpText>
        <label>Tour Lost Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Lost_Reason__c</fullName>
        <inlineHelpText>If no, why not?</inlineHelpText>
        <label>Tour Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t fit my schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did you take the tour?</inlineHelpText>
        <label>Tour</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Customer Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>